Add picture uploader

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Quicksand:700');
 @import "header";
-@import "place";
+@import "places";
+@import "errors";
