--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,14 @@
 <header class="container-fluid">
+
   <div id="site-logo">
     <img id="logo" src="https://www.freelogodesign.org/Content/img/logo-ex-7.png" alt="<%= site_name %>" >
     <span id="site-name"><%= site_name %></span>
   </div>
   <div id="add-place">
-    <button type="button" class="btn btn-primary">Add place</button>
+
+
+    <button type="button" class="show-places-form btn btn-primary" rel="background-places_form">Add place</button>
+
   </div>
   <div id="sign-in">
 
