--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -1,13 +1,14 @@
+<div class="place box panel panel-default">
+  <div class="panel-body">
+    <div class="place-name">
+      <%= place.name %>
+    </div>
+    <div class="place-picture">
+      <img src="<%= place.picture %>">
+    </div>
+    <div class="place-description">
+      <%= place.description %>
+    </div>
+  </div>
 
-
-<div id="place">
-  <div class="place-name container">
-    Place name
-  </div>
-  <div class="place-image container">
-    <img src="https://www.pandotrip.com/wp-content/uploads/2016/02/Rio3-1-980x699.jpg" alt="Place name">
-  </div>
-  <div class="place_short_description container">
-    Place description short
-  </div>
 </div>
