--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,27 +1,37 @@
-header{
-  //position: fixed;
+header {
+  position: fixed;
+  top: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  #site-logo{
+  border-bottom: rgba(0, 0, 0, 0.32) solid 1px;
+  z-index: 3;
+  background-color: #F7F7F7;
+  height: auto;
+  min-width: 350px;
+  #site-logo {
     vertical-align: middle;
     display: inline-block;
     width: 49%;
-    #logo{
-      width: 10%;
+    #logo {
+      width: 50px;
 
     }
-    #site-name{
+    #site-name {
       margin-left: 10px;
       font-family: 'Quicksand', sans-serif;
       font-size: 30px;
 
-
     }
   }
-  #add-place{
+  #add-place {
     text-align: right;
     width: 49%;
     margin-right: 0px;
     display: inline-block;
   }
+}
+
+.content {
+  top: 10vh;
+  position: relative;
 }
