--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,16 @@
 
   <body>
   <div id="flashMessages">
-    <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: "alert alert-info"%>
     <% end %>
   </div>
   <%= render 'places/place_form' %>
   <%= render 'layouts/header' %>
+
+  <div class="container content">
     <%= yield %>
+  </div>
   </body>
 </html>
 <script type="text/javascript">
@@ -27,7 +30,7 @@
         $('.place-form').show();
 
     })
-    $('.close').click(function () {
+    $('.close-form').click(function () {
         $('.place-form, #background-places_form').hide();
 
     })
