--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -1,14 +1,10 @@
-<div class="place box panel panel-default">
-  <div class="panel-body">
-    <div class="place-name">
-      <%= place.name %>
-    </div>
-    <div class="place-picture">
-      <img src="<%= place.picture %>">
-    </div>
-    <div class="place-description">
-      <%= place.description %>
-    </div>
-  </div>
+<div id="<%= place.id %>" class=" box <%= col_size %> ">
+  <%= link_to image_tag(place.picture), place %>
+
+
+
+  <div class="place-name"><h3><%= place.name %></h3></div>
+  <div class="place-description"><%= short_descr(place.description) %></div>
+
 
 </div>
