--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -5,12 +5,12 @@
 #background-places_form {
   display: none;
   z-index: 4;
-  height: 100vh;
+  height: 1000vh;
   background-color: rgba(0, 0, 0, 0.45);
   position: fixed;
   margin-top: -7%;
 
-  #place-form {
+  #pop-up-form {
     padding-top: 5px;
     padding-bottom: 20px;
     border-radius: 10px;
