--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,9 @@
   <head>
     <title>Places</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
   </head>
-
   <body>
     <div id="flashMessages">
       <% flash.each do |name, msg| %>
@@ -17,41 +14,7 @@
     </div>
     <%= render 'layouts/pop_up' %>
     <%= render 'layouts/header' %>
-    <div class="container content">
-      <%= yield %>
-    </div>
-  <script>
-      $('.show-places-form').click(function () {
-          var form_id = $('#' + $(this).attr("rel"));
-          $(form_id).show();
-          $('.place-form').show();
-      })
-      $('.close-form').click(function () {
-          $('.place-form, #background-places_form').hide();
-      })
-      $('.show-sign-in-form').click(function () {
-          var form_id = $('#' + $(this).attr("rel"));
-          $(form_id).show();
-          $('.sign-in-form').show();
-      })
-      $('.close-form').click(function () {
-          $('.sign-in-form, #background-places_form').hide();
-      })
-      $('.show-login-form').click(function () {
-          var form_id = $('#' + $(this).attr("rel"));
-          $(form_id).show();
-      })
-      $('.btn-login').click(function () {
-          $('#register').hide();
-      })
-      $('.show-register-form').click(function () {
-          var form_id = $('#' + $(this).attr("rel"));
-          $(form_id).show();
-      })
-      $('.btn-register').click(function () {
-          $('#login').hide();
-      })
-  </script>
+    <%= render 'layouts/content' %>
+    <%= render 'shared/script' %>
   </body>
-
 </html>
