--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,4 @@
 <header class="container-fluid">
-
-  <%= link_to image_tag("https://www.freelogodesign.org/Content/img/logo-ex-7.png", class: "logo", height: "50"), root_path %>
+  <%= link_to image_tag(site_logo, class: "logo", height: "50"), root_path %>
   <%= render 'layouts/navbar' %>
-
-
 </header>
