--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,6 +7,9 @@
       <%= link_to "My places (#{current_user.places.count})", my_places_path, class: "nav-link" %>
     </li>
     <li class="nav-item">
+      <%= link_to "Favorites (#{current_user.likes.count})", favorites_path, class: "nav-link" %>
+    </li>
+    <li class="nav-item">
       <%= link_to "Logout", destroy_user_session_path, method: :delete, data: {confirm: 'Are you sure?'}, class: "nav-link" %>
     </li>
   <% end %>
